@@ -19,7 +19,6 @@
 package com.sshtools.common.ssh;
 
 public enum SecurityLevel {
-	NONE,
 	WEAK,
 	STRONG,
 	PARANOID
